--- a/PortfolioApp/templates/index.html
+++ b/PortfolioApp/templates/index.html
@@ -23,7 +23,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-            Right now I havend publish my work but you can visit in my github.
+            Right now I have not publish my work but you can visit in my github.
             
             </div>
             <div class="modal-footer">
