--- a/PortfolioApp/templates/index.html
+++ b/PortfolioApp/templates/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary"><a target="_blank" href="https://github.com/BJaySPR/MomosRestaurent" style="color: #fff;">Visit Github</a></button>
+            <button type="button" class="btn btn-primary"><a target="_blank" href="https://github.com/BJaySPR?tab=repositories" style="color: #fff;">Visit Github</a></button>
         </div>
       </div>
     </div>
