--- a/PortfolioApp/templates/index.html
+++ b/PortfolioApp/templates/index.html
@@ -6,7 +6,7 @@
         <div class="header-content container">
             <h1 class="header-title">
                 <span class="up">HI!</span>
-                <span class="down">I am Bijay</span>
+                <span class="down">I am Bijay Tamang</span>
             </h1>
             <p class="header-subtitle">BACKEND WEB DEVELOPER</p>            
                 <!-- Button trigger modal -->
